# pardarshi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dependencies.py  main.py
app/routers/: api.py  ui.py
app/services/: annotator.py  extractor.py  tabulator.py
app/static/: style.css
app/templates/: base.html  index.html  rebalance_result.html  result.html
scripts/: bootstrap.sh
tests/: test_rebalance_route.py  test_tabulator.py
